<resources>
    <string name="app_name">Body Temperature Recorder</string>

    <string name="date">Time</string>

    <string name="change">Change</string>
    <string name="chg">CHG</string>

    <string name="temperature">Temperature</string>

    <string name="celsius">℃</string>
    <string name="fahrenheit">°F</string>
    
    <string name="condition">Condition</string>

    <string name="clear">Clear</string>

    <string name="memo">Memo</string>

    <string name="delete">Delete</string>

    <string name="save">Save</string>
    <string name="edit">Edit</string>
    <string name="add">Add</string>
    <string name="send">Send</string>
    <string name="select">Select</string>

    <string name="graphdays3">3 days Graph</string>
    <string name="graphdays7">7 days Graph</string>
    <string name="graphdays14">14 days Graph</string>
    <string name="graphdays30">30 days Graph</string>

    <string name="removeads">Remove Ads</string>
    <string name="privacy_policy">Privacy Policy</string>

    <string name="select_application">Select Application</string>
    <string name="permissions_not_granted">The required permission was not granted. Please check the permissions by opening the Settings app.</string>
    <string name="send_subject">Body Temperature Record</string>
    <string name="send_body_title">Send by Body Temperature Recorder</string>

    <string name="tab_temperature_list">Record</string>
    <string name="tab_graph">Graph</string>
    <string name="tab_person">People</string>
    <string name="tab_config">Config</string>

    <string name="title_temperature_list">Body Temperature</string>
    <string name="title_graph">Graph</string>
    <string name="title_person">People</string>
    <string name="title_config">Config</string>
    <string name="title_input_temperature">Regist Record</string>
    <string name="title_select_condition">Select Conditions</string>

    <string name="nodata_comment1">Please press the [Add] button</string>
    <string name="nodata_comment2">to record your body temperature.</string>

    <string name="display_in_Fahrenheit">Display in Fahrenheit</string>

    <string name="error_connect_failed">Connection failed. Please try again after a while.</string>
    <string name="error_purchase_failed">Purchase failed. Please try again after a while.</string>
    <string name="message_remove_ads">Ad deleted.</string>

    <string name="message_no_input_temperature">Please enter the body temperature.</string>
    <string name="message_invalid_temperature">Invalid body temperature.</string>

    <string name="confirm_delete_temperature">Delete the record. Is it OK?</string>
    <string name="ok">OK</string>
    <string name="cancel">Cancel</string>

    <string name="add_person">Add Person</string>
    <string name="edit_name">Edit Name</string>
    <string name="error_delete_person">Cannot be deleted because there is only one person.</string>
    <string name="confirm">Confirm</string>
    <string name="confirm_delete_person">Delete %s\'s information. Is it OK?</string>

    <string name="condition0">Runny nose</string>
    <string name="condition1">Stuffy nose</string>
    <string name="condition2">Cough</string>
    <string name="condition3">Sputum</string>
    <string name="condition4">Sneeze</string>
    <string name="condition5">Sore throat</string>
    <string name="condition6">Headache</string>
    <string name="condition7">Feel heavy</string>
    <string name="condition8">Body pain</string>
    <string name="condition9">Feel chills</string>
    <string name="condition10">Stomach ache</string>
    <string name="condition11">Diarrhea</string>
    <string name="condition12">Vomiting</string>
    <string name="condition13">Feel nauseate</string>
    <string name="condition14">No appetite</string>
    <string name="condition15">Wheezing</string>
    <string name="condition16">Difficulty Breathing</string>

</resources>
