<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/sendGraph"
        android:icon="@drawable/ic_send_white_24dp"
        android:title="@string/send"
        app:showAsAction="always|withText"
        android:orderInCategory="100" />

    <item
        android:id="@+id/changeType"
        android:icon="@drawable/ic_timeline_white_24dp"
        android:title="@string/change"
        app:showAsAction="always|withText"
        android:orderInCategory="110">

        <menu>
            <item android:id="@+id/graphdays3"
                android:title="@string/graphdays3" />
            <item android:id="@+id/graphdays7"
                android:title="@string/graphdays7" />
            <item android:id="@+id/graphdays14"
                android:title="@string/graphdays14" />
            <item android:id="@+id/graphdays30"
                android:title="@string/graphdays30" />
        </menu>

    </item>

</menu>

